--- a/index.html
+++ b/index.html
@@ -1,27 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="cache.appcache">
     <head>
         <meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
-        <meta name="description" content="Generate a gnuplot script by containing a bubble chart">
+        <meta name="description" content="This application is a useful and simple shopping list">
 	  	<meta name="author" content="Thiago Nascimento">
-		<meta name="keywords" content="bubble chart, gnuplot, bubble chart for gnuplot">
+		<meta name="keywords" content="list, shopping list, list, shopping">
         <meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<meta name="apple-mobile-web-app-title" content="Bubble">
+		<meta name="apple-mobile-web-app-title" content="Shopping List">
 		<meta name="robots" content="index, follow">
 
         <title>Shopping List</title>
+
+        <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+        <link rel="manifest" href="img/favicon/manifest.json">
+        <meta name="msapplication-TileColor" content="#37474F">
+        <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+        <meta name="theme-color" content="#37474F">
 
         <!-- Material Design fonts -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/snackbar.min.css">
         <link rel="stylesheet" href="css/material.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css">
-    <!--<link rel="stylesheet" href="css/bootstrap-material-design.min.css">
-        <link rel="stylesheet" href="css/ripples.min.css">-->
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
@@ -36,43 +51,32 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#items">Shopping List</a>
+                    <a class="navbar-brand" href="#pending">Shopping List</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
         			<ul class="nav navbar-nav">
-                        <li class="active"><a class="menu-item" href="#items" >Items</a></li>
+                        <li class="active"><a class="menu-item" href="#pending" >Pending</a></li>
         				<li><a class="menu-item" href="#pantry">Pantry</a></li>
                         <li><a class="menu-item" href="#categories">Categories</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a class="menu-item" href="#settings">Settings</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-
-        <div id="actionbar">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-2">
-                        <button type="button" id="actionbar-cancel" class="btn btn-transparent pull-left"><i class="glyphicon glyphicon-arrow-left"></i><span class="actionbar-btn-text">Back</span></button>
-                    </div>
-                    <div class="col-xs-10 actionbar-right-buttons">
-                        <button type="button" id="actionbar-done" class="btn btn-transparent pull-right"><i class="glyphicon glyphicon-ok"></i><span class="actionbar-btn-text">Done</span></button>
-                        <button type="button" id="actionbar-add" class="btn btn-transparent pull-right"><i class="glyphicon glyphicon-plus"></i><span class="actionbar-btn-text">Add</span></button>
-                        <button type="button" id="actionbar-edit" class="btn btn-transparent pull-right"><i class="glyphicon glyphicon-pencil"></i><span class="actionbar-btn-text">Edit</span></button>
-                        <button type="button" id="actionbar-remove" class="btn btn-transparent pull-right"><i class="glyphicon glyphicon-trash"></i><span class="actionbar-btn-text">Remove</span></button>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <div id="actionbar"></div>
 
         <div id="content" class="container"></div>
 
         <!-- Vendors -->
-        <script type="text/javascript" charset="utf8" src="js/jquery.min.js"></script>
-        <script type="text/javascript" charset="utf8" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" charset="utf8" src="js/jquery.form-validator.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/vendor/jquery.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/vendor/bootstrap.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/vendor/jquery.form-validator.min.js"></script>
         <script type="text/javascript" charset="utf8" src="js/vendor/snackbar.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/vendor/lokijs.min.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/vendor/l10n.min.js"></script>
 
         <!-- Utils -->
         <script type="text/javascript" charset="utf8" src="js/app/utils/ArrayUtils.js"></script>
@@ -81,13 +85,31 @@
         <script type="text/javascript" charset="utf8" src="js/app/utils/DatabaseUtils.js"></script>
         <script type="text/javascript" charset="utf8" src="js/app/utils/SnackbarUtils.js"></script>
 
+        <!-- Components -->
         <script type="text/javascript" charset="utf8" src="js/app/components/ActionBar.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/app/components/NavBar.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/app/components/ListView.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/app/components/ToolBar.js"></script>
 
         <!-- Modules -->
         <script type="text/javascript" charset="utf8" src="js/app/modules/ItemsModule.js"></script>
         <script type="text/javascript" charset="utf8" src="js/app/modules/PantryModule.js"></script>
         <script type="text/javascript" charset="utf8" src="js/app/modules/CategoriesModule.js"></script>
+        <script type="text/javascript" charset="utf8" src="js/app/modules/SettingsModule.js"></script>
         <script type="text/javascript" charset="utf8" src="js/app/modules/LoadModule.js"></script>
+
+        <!-- Main -->
+        <script type="text/javascript" charset="utf8" src="js/app/localizations.js"></script>
         <script type="text/javascript" charset="utf8" src="js/script.js"></script>
+
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-46693870-20', 'auto');
+            ga('send', 'pageview');
+        </script>
     </body>
 </html>
