--- a/pages/items.html
+++ b/pages/items.html
@@ -1,26 +1,8 @@
 <div class="pages" id="page-items">
 
-    <div class="toolbar ">
-        <div class="row">
-            <div class="col-xs-6">
-                <p class="total" id="product-total"></p>
-            </div>
-            <div class=" col-xs-6">
-                <button class="btn pull-right btn-default" id="new-product">d</button>
-            </div>
-        </div>
-    </div>
+    <div id="toolbar"></div>
 
-    <div class="panels">
-        <div class="panel panel-default">
-            <!-- Default panel contents -->
-            <div class="panel-heading">Uncategorized</div>
-            <div class="list-group" id="uncategorized">
-
-            </div>
-        </div>
-    </div>
-
+    <div id="listview"></div>
 </div>
 
 <script type="text/javascript" charset="utf8">
