--- a/pages/pantry.html
+++ b/pages/pantry.html
@@ -1,25 +1,6 @@
 <div class="pages" id="page-pantry">
-
-    <div class="toolbar ">
-        <div class="row">
-            <div class="col-xs-6">
-                <p class="total" id="product-total"></p>
-            </div>
-            <div class=" col-xs-6">
-                <button class="btn pull-right btn-default" id="new-product">New Product</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="panels">
-        <div class="panel panel-default">
-            <!-- Default panel contents -->
-            <div class="panel-heading">Uncategorized</div>
-            <div class="list-group" id="uncategorized">
-
-            </div>
-        </div>
-    </div>
+    <div id="toolbar"></div>
+    <div id="listview"></div>
 </div>
 
 <!-- Modal -->
@@ -44,7 +25,7 @@
                         <div class="col-xs-4">
                             <div class="form-group">
                                 <label for="product-amount">Amount</label>
-                                <input type="number" value="1" class="form-control" autocomplete="off" data-validation="required" id="product-amount">
+                                <input type="number" value="1" class="form-control" step="0.01" autocomplete="off" data-validation="required|number" data-validation-allowing="float" id="product-amount">
                             </div>
                         </div>
                         <div class="col-xs-4">
@@ -53,13 +34,22 @@
                                 <select class="form-control select" id="product-unit" data-validation="required">
                                     <option value="unit">Unit</options>
                                     <option value="box">Box</options>
+                                    <option value="piece">Piece</options>
+                                    <option value="package">Package</options>
+                                    <option value="bottle">Bottle</options>
+                                    <option value="sack">Sack</options>
+                                    <option value="dozen">Dozen</options>
+                                    <option value="g">g</options>
+                                    <option value="kg">kg</options>
+                                    <option value="liter">Liter</options>
+                                    <option value="ml">ml</options>
                                 </select>
                             </div>
                         </div>
                         <div class="col-xs-4">
                             <div class="form-group">
                                 <label for="product-value">Value</label>
-                                <input type="text" value="0.0" class="form-control" autocomplete="off" data-validation="required" id="product-value">
+                                <input type="number" value="0.0" class="form-control" step="0.01" autocomplete="off" data-validation="required|number" data-validation-allowing="float" id="product-value">
                             </div>
                         </div>
                     </div>
@@ -70,7 +60,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-primary" id="btn-save-product">Save</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-default" id="btn-cancel" data-dismiss="modal">Cancel</button>
                 </div>
             </form>
         </div>
