--- a/pages/settings.html
+++ b/pages/settings.html
@@ -19,6 +19,16 @@
                         <option value="pt-BR">Portuguese</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="settings-currency-symbol">Currency Symbol</label>
+                    <select class="form-control select" id="settings-currency-symbol" data-validation="required">
+                        <option value="$">$</option>
+                        <option value="R$">R$</option>
+                        <option value="£">£</option>
+                        <option value="€">€</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary" id="btn-settings-save">Save</button>
             </div>
             <div role="tabpanel" class="tab-pane fade in" id="settings-tab-advanced">
                 <br>
@@ -35,7 +45,7 @@
             </div>
         </div>
         <hr>
-        <button type="submit" class="btn btn-primary" id="btn-settings-save">Save</button>
+
     </form>
 </div>
 
