added spanish support

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -17,6 +17,7 @@
                     <select class="form-control select" id="settings-language" data-validation="required">
                         <option value="en-US">English</option>
                         <option value="pt-BR">Portuguese</option>
+                        <option value="pt-ES">Spanish</option>
                     </select>
                 </div>
                 <div class="form-group">
