added hide empty categories

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -30,6 +30,13 @@
                         <option value="€">€</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="show-empty-categories">Show Empty Categories</label>
+                    <select class="form-control select" id="show-empty-categories" data-validation="required">
+                        <option value="yes">Yes</option>
+                        <option value="no">No</option>
+                    </select>
+                </div>
                 <hr>
                 <button type="submit" class="btn btn-primary" id="btn-settings-save">Save</button>
             </div>
