new button color and few modifications on about page

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -58,9 +58,13 @@
                 <img src="img/favicon/android-icon-72x72.png" alt="logo"/>
                 <h3>Shopping List</h3>
                 <p>This application is a useful and simple shopping list.</p>
-                <p id="developer"><small>Developed by <a href="http://github.com/thiagodnf/" target="-_blank">Thiago Nascimento</a></small></p>
-                <p id="version"><small>Version: 1.0.0</small></p>
-                <p><em>If you encounter any problems, please use the <a href="https://github.com/thiagodnf/shopping-list/issues" target="-_blank">GitHub Issue Tracker</a>. <br>Did you  like this project? Let me know.</em></p>
+                <p id="developer"><strong>Developed by:</strong></p>
+                <p><a href="http://github.com/thiagodnf/" target="-_blank">Thiago Nascimento</a></p>
+                <p id="version"><strong>Version:</strong></p>
+                <p id="version-number">1.0.0</p>
+                <br>
+                <p><em>If you encounter any problems, please use the <a href="https://github.com/thiagodnf/shopping-list/issues" target="-_blank">GitHub Issue Tracker</a>.
+                Did you  like this project? Let me know.</em></p>
             </div>
         </div>
 
