--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
-        <meta name="description" content="This application is a useful and simple shopping list">
-	  	<meta name="author" content="Thiago Nascimento">
+        <meta name="description" content="Useful and simple shopping list in javascript with local storage">
+	  	<meta name="author" content="Thiago Ferreira">
 		<meta name="keywords" content="list, shopping list, list, shopping">
         <meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<meta name="apple-mobile-web-app-title" content="Shopping List">
+		<meta name="apple-mobile-web-app-title" content="Shopping List in JS">
 		<meta name="robots" content="index, follow">
 
-        <title>Shopping List</title>
+        <title>Shopping List in JS</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -102,14 +102,5 @@
         <script type="text/javascript" charset="utf8" src="js/app/localizations.js"></script>
         <script type="text/javascript" charset="utf8" src="js/script.js"></script>
 
-        <script>
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-46693870-20', 'auto');
-            ga('send', 'pageview');
-        </script>
     </body>
 </html>
