--- a/pages/settings.html
+++ b/pages/settings.html
@@ -56,14 +56,14 @@
             <div role="tabpanel" class="tab-pane fade in" id="settings-tab-about">
                 <br>
                 <img src="img/favicon/android-icon-72x72.png" alt="logo"/>
-                <h3>Shopping List</h3>
-                <p>This application is a useful and simple shopping list.</p>
+                <h3>Shopping List in JS</h3>
+                <p>Useful and simple shopping list in javascript with local storage.</p>
                 <p id="developer"><strong>Developed by:</strong></p>
-                <p><a href="http://github.com/thiagodnf/" target="-_blank">Thiago Nascimento</a></p>
+                <p><a href="http://github.com/thiagodnf/" target="-_blank">Thiago Ferreira</a></p>
                 <p id="version"><strong>Version:</strong></p>
                 <p id="version-number">1.0.0</p>
                 <br>
-                <p><em>If you encounter any problems, please use the <a href="https://github.com/thiagodnf/shopping-list/issues" target="-_blank">GitHub Issue Tracker</a>.
+                <p><em>If you encounter any problems, please use the <a href="https://github.com/thiagodnf/shopping-list-in-js/issues" target="-_blank">GitHub Issue Tracker</a>.
                 Did you  like this project? Let me know.</em></p>
             </div>
         </div>
